# File-manager-system

./: CMakeLists.txt  External_storage.cpp  External_storage.h  File_manager.cpp  File_manager.h  Internal_storage.cpp  Internal_storage.h  main.cpp
